--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -37,6 +37,14 @@
   note = {Accessed 2019-06-19}
 }
 
+@misc{verification:github,
+  author = "Ramon Boss and Kai Brünnler and Anna Doukmak",
+  title = "The bitcoin-s-verification repository",
+  url = {https://github.com/kaibr/bitcoin-s-verification},
+  note = {Accessed 2019-07-06}
+}
+
+
 @misc{BitcoinS:pull435,
   author = "Ramon Boss",
   title = "Transaction can reference two different outputs of the same previous transaction",
