--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -423,7 +423,7 @@ aims to represent the C-type \texttt{int64\_t}.
   \label{fig:currencyunits}
 \end{figure}
 
-\paragraph{Extracting the Relevant Code} The relevant code for the
+\paragraph{Extracting the Relevant Code.} The relevant code for the
 addition of satoshis is in two files: CurrencyUnits.scala and
 NumberType.scala. From those files we removed the majority of the code
 because it is not needed for the verification of our property. For
